@@ -1,5 +1,11 @@
 2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * agent/seahorse-agent-ssh.c: Fix ssh agent hang when used as a simple
+    daemon (swap sockets proxy). Better warnings when incoming data is 
+    invalid. 
+
+2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-passphrase.c:
     * libseahorse/seahorse-prefs-cache.c:
     * libseahorse/seahorse-prefs.glade: Properly start seahorse-agent
